# cube-projection

./: .gitignore  Cargo.toml  LICENSE  README.md  abc.diff
shaders/: fragment.wgsl  vertex.wgsl
src/: application.rs  camera.rs  input.rs  main.rs  mesh.rs  renderer.rs  texture.rs  utils.rs
