[package]
name = "cube-projection"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = ["derive"] }
clap = { version = "4.5.34", features = ["derive"] }
env_logger = "0.11.7"
glam = { version = "0.30.1", features = ["bytemuck"] }
image = "0.25.6"
log = "0.4.27"
png = "0.17.16"
pollster = "0.4.0"
rayon = "1.10.0"
tobj = "4.0.3"
wgpu = "24.0.3"
winit = "0.30.9"
